Fix poor color contrast for cancel icon hover state in light mode

--- a/wagtailio/static/sass/components/_modal.scss
+++ b/wagtailio/static/sass/components/_modal.scss
@@ -120,12 +120,10 @@
             }
         }
 
-        .theme-dark & {
-            &:hover,
-            &:focus {
-                #{$root}__close-icon {
-                    fill: $color--teal-100;
-                }
+        &:hover,
+        &:focus {
+            #{$root}__close-icon {
+               fill: $color--teal-100;
             }
         }
     }
